Edit paragraph and button

--- a/Challenge 3/index.html
+++ b/Challenge 3/index.html
@@ -12,10 +12,9 @@
       <section class="content">
         <h1>Responsive layouts don't have to be a struggle</h1>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda,
-          pariatur explicabo, consequatur ea recusandae aliquam nisi porro at
-          sint molestiae impedit fuga, iusto vitae est magni quae? Fuga,
-          reprehenderit eaque?
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
         </p>
 
         <div class="button">
