--- a/Flexbox Challenge 4/index.html
+++ b/Flexbox Challenge 4/index.html
@@ -5,7 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <section class="hero">
+      <p>lorem ipsum sit</p>
+      <h1>Responsive layouts don't have to be a struggle</h1>
+    </section>
+
+    <main class="container">
+      <section class="section__one">
+        <h2>Quality Designs</h2>
+        <div class="row">
+          <div class="col">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui
+            vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu
+            felis. Sociis natoque penatibus et magnis dis.
+          </div>
+          <div class="col">
+            Felis donec et odio pellentesque diam volutpat. Aliquam purus sit
+            amet luctus venenatis. Turpis in eu mi bibendum neque egestas congue
+            quisque egestas. Pellentesque sit amet porttitor eget dolor morbi
+            non.
+          </div>
+        </div>
+      </section>
+      <section class="section__two">
+        <div class="row">
+          <div class="col">
+            <h3>Made custom for you</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
+            </p>
+          </div>
+          <div class="col"><img src="./image-01.jpg" alt="" /></div>
+        </div>
+      </section>
+      <section class="section__three">
+        <div class="row">
+          <div class="col"><img src="./image-02.jpg" alt="" /></div>
+          <div class="col">
+            <h3>Created with Care</h3>
+            <p>
+              Felis donec et odio pellentesque diam volutpat. Aliquam purus sit
+              amet luctus venenatis. Turpis in eu mi bibendum neque egestas
+              congue quisque egestas. Pellentesque sit amet porttitor eget dolor
+              morbi non.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
