--- a/Flexbox Challenge 4/index.html
+++ b/Flexbox Challenge 4/index.html
@@ -22,8 +22,9 @@
       <h1>Responsive layouts don't have to be a struggle</h1>
     </section>
 
-    <main class="container">
-      <section class="section__one">
+      <section>
+        <div class="container">
+
         <h2>Quality Designs</h2>
         <div class="row">
           <div class="col">
@@ -40,22 +41,28 @@
           </div>
         </div>
       </section>
-      <section class="section__two">
+        </div>
+      <section>
+<div class="container">
+
         <div class="row">
           <div class="col">
             <h3>Made custom for you</h3>
-            <p>
+            <p class="row_2_p">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam.
             </p>
           </div>
-          <div class="col"><img src="./image-01.jpg" alt="" /></div>
+          <div class="col"><img src="./image-01.jpg" alt="Sun shining on sand with a man standing" class="image_1"/></div>
         </div>
+    </div>
       </section>
-      <section class="section__three">
+
+<section>
+          <div class="container">
         <div class="row">
-          <div class="col"><img src="./image-02.jpg" alt="" /></div>
+          <div class="col"><img src="./image-02.jpg" alt="Dawn view over mountains" class="image_2"/></div>
           <div class="col">
             <h3>Created with Care</h3>
             <p>
@@ -66,7 +73,7 @@
             </p>
           </div>
         </div>
+    </div>
       </section>
-    </main>
   </body>
 </html>
