--- a/Flexbox Challenge 4/index.html
+++ b/Flexbox Challenge 4/index.html
@@ -18,10 +18,14 @@
   </head>
   <body>
     <section class="hero">
-      <p>lorem ipsum sit</p>
-      <h1>Responsive layouts don't have to be a struggle</h1>
+      <p class="intro__text">lorem ipsum sit</p>
+      <h1 class="intro__title">Responsive layouts don't have to be a struggle</h1>
     </section>
-
+<section class="section-two"><h2 class="section-title">
+  
+</h2></section>
+<section class="section-three"></section>
+<section class="section-four"></section>
       <section>
         <div class="container">
 
