Re-install Sass and SCSS

--- a/Flexbox Challenge 4/index.html
+++ b/Flexbox Challenge 4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.scss" />
+    <title>Responsive layouts don't have to be a struggle</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -13,8 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.scss" />
   </head>
   <body>
     <section class="intro">
@@ -73,6 +72,13 @@
     <section class="section-four">
       <div class="container row">
         <div class="col">
+          <img
+            src="./image-02.jpg"
+            alt="Dawn view over mountains"
+            class="image_2"
+          />
+        </div>
+        <div class="col">
           <h2 class="section-title">Created with Care</h2>
           <p>
             Felis donec et odio pellentesque diam volutpat. Aliquam purus sit
@@ -80,13 +86,6 @@
             quisque egestas. Pellentesque sit amet porttitor eget dolor morbi
             non.
           </p>
-        </div>
-        <div class="col">
-          <img
-            src="./image-02.jpg"
-            alt="Dawn view over mountains"
-            class="image_2"
-          />
         </div>
       </div>
     </section>
