--- a/Flexbox Challenge 4/index.html
+++ b/Flexbox Challenge 4/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.scss" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <section class="intro">
