--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -5,11 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Challenge</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
+
+    <!--Import Oswald Bold Font-->
+    <!--font-family: 'Oswald', sans-serif;-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+
+<!--Import Montserrat Regular Font-->
+<!-- font-family: 'Montserrat', sans-serif; -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
-    Some text
+    Some text 
     <script src="script.js"></script>
   </body>
 </html>
