feat: Create Navbar content

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -21,6 +21,17 @@
 
   <body>
     Some text 
+    <nav>Logo <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
+
+    <ul>
+        <li>Sign In</li>
+        <li>Sign Up</li>
+    </ul>
+
     <script src="script.js"></script>
   </body>
 </html>
