fix: Navbar closing tag

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -31,7 +31,9 @@
         <li>Sign In</li>
         <li>Sign Up</li>
     </ul>
+    </nav>
 
+    
     <script src="script.js"></script>
   </body>
 </html>
