feat: Create Hero section content

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -33,6 +33,17 @@
     </ul>
     </nav>
 
+    <section class="hero">
+        Responsive layouts <span class="brown">don't have to be a struggle</span>
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+</p>        
+
+<p class="button"></p>
+    </section>
+
+
     
     <script src="script.js"></script>
   </body>
