feat: Create section two

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -34,7 +34,9 @@
     </nav>
 
     <section class="hero">
-        Responsive layouts <span class="brown">don't have to be a struggle</span>
+        <h1>
+Responsive layouts <span class="brown">don't have to be a struggle</span>
+        </h1>
 
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -43,8 +45,38 @@
 <p class="button"></p>
     </section>
 
-
+<section class="section-two">
     
+    <div class="card">
+        <h3 class="brown">
+Mobile-first
+        </h3>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+</p>
+    </div>
+
+
+    <div class="card">
+        <h3 class="brown">Efficient</h3>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+</p>
+    </div>
+
+
+    <div class="card">
+        <h3 class="brown">
+            Done right
+        </h3>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+</p>
+    </div>
+</section>
+
+
+
     <script src="script.js"></script>
   </body>
 </html>
