feat: Create footer content

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -75,7 +75,68 @@ Mobile-first
     </div>
 </section>
 
+<section class="section-three">
 
+    <h2 class="brown">
+        It doesn't have to be so hard
+    </h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+    </p>
+
+<img src="./the-image.jpg" alt="image of website sketch">
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+</p>
+
+<div class="black-cards">
+    <div class="black-card">
+        <h2>Break it down</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+
+    <div class="black-card">
+        <h2>Break it down</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+
+    <div class="black-card">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+     </div>
+</div>
+</section>
+
+<section class="footer">
+    <h1>Just scratching the surface</h1>
+    <div>
+        <h4 class="brown">About our company</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </div>
+
+    <div>
+        <h4 class="brown">Getting around</h4>
+        <p>Home</p>
+        <p>About</p>
+        <p>Contact</p>
+    </div>
+
+    <div>
+        <h4 class="Other things">Getting around</h4>
+        <p>Lorem ipsum</p>
+        <p>dolor</p>
+        <p>sit amet</p>
+        <p>consectetur</p>
+    </div>
+    <div>
+        <h4 class="And more">Getting around</h4>
+        <p>Lorem ipsum</p>
+        <p>dolor</p>
+        <p>sit amet</p>
+        <p>consectetur</p>
+    </div>
+    
+</section>
 
     <script src="script.js"></script>
   </body>
