fix: Footer classnames

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -9,134 +9,158 @@
 
     <!--Import Oswald Bold Font-->
     <!--font-family: 'Oswald', sans-serif;-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
-<!--Import Montserrat Regular Font-->
-<!-- font-family: 'Montserrat', sans-serif; -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-
+    <!--Import Montserrat Regular Font-->
+    <!-- font-family: 'Montserrat', sans-serif; -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    Some text 
-    <nav>Logo <ul>
+    <nav>
+      Logo
+      <ul>
         <li>Home</li>
         <li>About</li>
         <li>Contact</li>
-    </ul>
+      </ul>
 
-    <ul>
+      <ul>
         <li>Sign In</li>
         <li>Sign Up</li>
-    </ul>
+      </ul>
     </nav>
 
     <section class="hero">
-        <h1>
-Responsive layouts <span class="brown">don't have to be a struggle</span>
-        </h1>
+      <h1>
+        Responsive layouts
+        <span class="brown">don't have to be a struggle</span>
+      </h1>
 
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-</p>        
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.
+      </p>
 
-<p class="button"></p>
+      <p class="button"></p>
     </section>
 
-<section class="section-two">
-    
-    <div class="card">
-        <h3 class="brown">
-Mobile-first
-        </h3>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-</p>
-    </div>
+    <section class="section-two">
+      <div class="card">
+        <h3 class="brown">Mobile-first</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+      </div>
 
-
-    <div class="card">
+      <div class="card">
         <h3 class="brown">Efficient</h3>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-</p>
-    </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+      </div>
 
+      <div class="card">
+        <h3 class="brown">Done right</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+      </div>
+    </section>
 
-    <div class="card">
-        <h3 class="brown">
-            Done right
-        </h3>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-</p>
-    </div>
-</section>
+    <section class="section-three">
+      <h2 class="brown">It doesn't have to be so hard</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam.
+      </p>
 
-<section class="section-three">
+      <img src="./the-image.jpg" alt="image of website sketch" />
 
-    <h2 class="brown">
-        It doesn't have to be so hard
-    </h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-    </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam.
+      </p>
 
-<img src="./the-image.jpg" alt="image of website sketch">
+      <div class="black-cards">
+        <div class="black-card">
+          <h2>Break it down</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
 
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-</p>
+        <div class="black-card">
+          <h2>Break it down</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
 
-<div class="black-cards">
-    <div class="black-card">
-        <h2>Break it down</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
+        <div class="black-card">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+      </div>
+    </section>
 
-    <div class="black-card">
-        <h2>Break it down</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-
-    <div class="black-card">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-     </div>
-</div>
-</section>
-
-<section class="footer">
-    <h1>Just scratching the surface</h1>
-    <div>
+    <section class="footer">
+      <h1>Just scratching the surface</h1>
+      <div>
         <h4 class="brown">About our company</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-    </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+      </div>
 
-    <div>
+      <div>
         <h4 class="brown">Getting around</h4>
         <p>Home</p>
         <p>About</p>
         <p>Contact</p>
-    </div>
+      </div>
 
-    <div>
-        <h4 class="Other things">Getting around</h4>
+      <div>
+        <h4 class="brown">Other things</h4>
         <p>Lorem ipsum</p>
         <p>dolor</p>
         <p>sit amet</p>
         <p>consectetur</p>
-    </div>
-    <div>
-        <h4 class="And more">Getting around</h4>
+      </div>
+      <div>
+        <h4 class="brown">And more</h4>
         <p>Lorem ipsum</p>
         <p>dolor</p>
         <p>sit amet</p>
         <p>consectetur</p>
-    </div>
-    
-</section>
+      </div>
+    </section>
 
     <script src="script.js"></script>
   </body>
