feat: Make Navbar text links

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -26,18 +26,16 @@
 
   <body>
     <nav>
-        <p>
-            Logo
-        </p>
+      <p>Logo</p>
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
+          <li><a href="Home"> Home </a></li>
+          <li><a href="About"> About </a></li>
+        <li><a href="Contact"> Contact </a></li>
       </ul>
 
       <ul>
-        <li>Sign In</li>
-        <li>Sign Up</li>
+        <li><a href=""> Sign In </a></li>
+        <li><a href=""> Sign Up </a></li>
       </ul>
     </nav>
 
