feat: Add logo image

--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -26,11 +26,11 @@
 
   <body>
     <nav>
-      <p>Logo</p>
+      <p><img src="logo.svg" alt="logo"></p>
       <ul>
-          <li><a href="Home"> Home </a></li>
-          <li><a href="About"> About </a></li>
-        <li><a href="Contact"> Contact </a></li>
+          <li><a href="home"> Home </a></li>
+          <li><a href="about"> About </a></li>
+        <li><a href="contact"> Contact </a></li>
       </ul>
 
       <ul>
@@ -39,7 +39,7 @@
       </ul>
     </nav>
 
-    <section class="hero">
+    <section id="home" class="hero">
       <h1>
         Responsive layouts
         <span class="brown">don't have to be a struggle</span>
@@ -53,7 +53,7 @@
       <p class="button"></p>
     </section>
 
-    <section class="section-two">
+    <section id="about" class="section-two">
       <div class="card">
         <h3 class="brown">Mobile-first</h3>
         <p>
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <section class="footer">
+    <section id="contact" class="footer">
       <h1>Just scratching the surface</h1>
       <div>
         <h4 class="brown">About our company</h4>
