--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -25,19 +25,21 @@
   </head>
 
   <body>
-    <nav>
-      <p><img src="logo.svg" alt="logo"></p>
-      <ul>
-          <li><a href="home"> Home </a></li>
-          <li><a href="about"> About </a></li>
-        <li><a href="contact"> Contact </a></li>
+    <div class="container">
+        <nav>
+            <p><img src="logo.svg" alt="logo"></p>
+            <ul>
+                <li><a href="#home"> Home </a></li>
+                <li><a href="#about"> About </a></li>
+                <li><a href="#contact"> Contact </a></li>
       </ul>
-
+      
       <ul>
-        <li><a href=""> Sign In </a></li>
-        <li><a href=""> Sign Up </a></li>
-      </ul>
+          <li><a href=""> Sign In </a></li>
+          <li><a href=""> Sign Up </a></li>
+        </ul>
     </nav>
+</div>
 
     <section id="home" class="hero">
       <h1>
