--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -27,22 +27,24 @@
   <body>
     <div class="nav-container">
       <nav>
-        <p><img src="logo.svg" alt="logo" /></p>
+        <div class="logo"><img src="logo.svg" alt="logo" /></div>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </a>
-        <ul>
-          <li><a href="#home"> Home </a></li>
-          <li><a href="#about"> About </a></li>
-          <li><a href="#contact"> Contact </a></li>
-        </ul>
+        <div class="nav-links">
+          <ul>
+            <li><a href="#home"> Home </a></li>
+            <li><a href="#about"> About </a></li>
+            <li><a href="#contact"> Contact </a></li>
+          </ul>
 
-        <ul>
-          <li><a href=""> Sign In </a></li>
-          <li><a href=""> Sign Up </a></li>
-        </ul>
+          <ul>
+            <li><a href=""> Sign In </a></li>
+            <li><a href=""> Sign Up </a></li>
+          </ul>
+        </div>
       </nav>
     </div>
 
@@ -99,7 +101,7 @@
         minim veniam.
       </p>
 
-      <img src="./the-image.jpg" alt="image of website sketch" />
+      <img class="section-three-image" src="./the-image.jpg" alt="image of website sketch" />
 
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
