--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -25,151 +25,161 @@
   </head>
 
   <body>
-    <div class="nav-container">
-      <nav>
-        <div class="logo"><img src="logo.svg" alt="logo" /></div>
-        <a href="#" class="toggle-button">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </a>
-        <div class="nav-links">
-          <ul>
-            <li><a href="#home"> Home </a></li>
-            <li><a href="#about"> About </a></li>
-            <li><a href="#contact"> Contact </a></li>
-          </ul>
-
-          <ul>
-            <li><a href=""> Sign In </a></li>
-            <li><a href=""> Sign Up </a></li>
-          </ul>
+    <header> 
+        <div class="container row">
+            <button class="nav-toggle" aria-label="open navigation">
+                <span class="hamburger"></span>
+            </button>
+            <a class="logo" href="#">
+                <img src="logo.svg" alt="conquering responsive layouts">
+            </a>
+            <nav class="nav">
+                <ul class="nav__list nav__list--primary">
+                    <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+                </ul>
+                <ul class="nav__list nav__list--secondary">
+                    <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign up</a></li>
+                </ul>
+            </nav>
         </div>
-      </nav>
-    </div>
+    </header>
 
-    <section id="home" class="hero">
-      <h1>
-        Responsive layouts
-        <span class="brown">don't have to be a struggle</span>
-      </h1>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-      </p>
-
-      <p class="button"></p>
-    </section>
-
-    <section id="about" class="section-two">
-      <div class="card">
-        <h3 class="brown">Mobile-first</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3 class="brown">Efficient</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3 class="brown">Done right</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam.
-        </p>
+ <body>
+    <section class="heroPage">
+      <div class="container row">
+        <h1>
+          Responsive layouts
+          <span class="hero--coloured">don't have to be a stuggle</span>
+        </h1>
+        <div class="hero__description">
+          <h4 class="hero__description__text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit
+            tempora voluptas laboriosam cupiditate dolorem id explicabo,
+            possimus natus. Temporibus, veritatis.
+          </h4>
+          <a href="" class="hero__description__button">I want to learn</a>
+        </div>
       </div>
     </section>
-
-    <section class="section-three">
-      <h2 class="brown">It doesn't have to be so hard</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-        minim veniam.
-      </p>
-
-      <img class="section-three-image" src="./the-image.jpg" alt="image of website sketch" />
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-        minim veniam.
-      </p>
-
-      <div class="black-cards">
-        <div class="black-card">
-          <h2>Break it down</h2>
+    <section class="cards">
+      <div class="container row">
+        <div class="about__card col">
+          <h1>Mobile-first</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            alias ratione velit, distinctio minima voluptas pariatur et illo
+            exercitationem suscipit similique a animi, ad illum.
           </p>
         </div>
-
-        <div class="black-card">
-          <h2>Break it down</h2>
+        <div class="about__card col">
+          <h1>Efficient</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            alias ratione velit, distinctio minima voluptas pariatur et illo
+            exercitationem suscipit similique a animi, ad illum.
           </p>
         </div>
-
-        <div class="black-card">
+        <div class="about__card col">
+          <h1>Done Right</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            alias ratione velit, distinctio minima voluptas pariatur et illo
+            exercitationem suscipit similique a animi, ad illum.
           </p>
         </div>
       </div>
     </section>
-
-    <section id="contact" class="footer">
-      <h1>Just scratching the surface</h1>
-      <div>
-        <h4 class="brown">About our company</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam.
-        </p>
+    <main class="content">
+      <div class="container row">
+        <div class="content__left">
+          <h1>It doesn't have to be so hard</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nihil
+            necessitatibus sint asperiores vel amet delectus, commodi architecto
+            cum eaque dolorum, excepturi, eligendi animi obcaecati consectetur
+            suscipit? Quod, ex. Vitae quam qui mollitia, ab autem iure, debitis
+            sapiente ducimus dolores et accusamus prov.
+          </p>
+          <img src="the-image.jpg" alt="" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nihil
+            necessitatsint ases vel as animi obcaecati sectetur suscipit? Quod,
+            ex.tae quam qui molitia, ab autem iure, debitis sapiente ducimus
+            dolores et accusamus prov. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Modi, iste?
+          </p>
+        </div>
+        <div class="content__cards">
+          <div class="card">
+            <h1>Break it down</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellendus aperiam quae laborum. Unde necessitatibus ratione illo
+              quas nesciunt consequuntur magnam.
+            </p>
+          </div>
+          <div class="card">
+            <h1>Work your way up</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellendus aperiam quae laborum. Unde necessitatibus ratione illo
+              quas nesciunt consequuntur magnam.
+            </p>
+          </div>
+          <div class="card">
+            <h1>Break it down</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Repellendus aperiam quae laborum. Unde necessitatibus ratione illo
+              quas nesciunt consequuntur magnam.
+            </p>
+          </div>
+        </div>
       </div>
-
-      <div>
-        <h4 class="brown">Getting around</h4>
-        <p>Home</p>
-        <p>About</p>
-        <p>Contact</p>
+    </main>
+    <footer>
+      <div class="container">
+        <h1>Just scratching the surface</h1>
+        <div class="footer row">
+          <div class="col">
+            <h2>About our company</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad
+              voluptate soluta, quaerat reiciendis quod ab nihil, assumenda quam
+              sapiente temporibus quae.
+            </p>
+          </div>
+          <div class="col">
+              <h2>Getting around</h2>
+              <ul>
+                  <li>Home</li>
+                  <li>About</li>
+                  <li>Contact</li>
+              </ul>
+          </div>
+          <div class="col">
+            <h2>Other things</h2>
+            <ul>
+                <li>Lorem Ipsum</li>
+                <li>Dolor</li>
+                <li>Sit Amet</li>
+                <li>consectetur</li>
+            </ul>
+        </div>
+        <div class="col">
+            <h2>And more</h2>
+            <ul>
+                <li>Lorem Ipsum</li>
+                <li>Dolor</li>
+                <li>Sit Amet</li>
+                <li>consectetur</li>
+            </u
+        </div>
       </div>
-
-      <div>
-        <h4 class="brown">Other things</h4>
-        <p>Lorem ipsum</p>
-        <p>dolor</p>
-        <p>sit amet</p>
-        <p>consectetur</p>
-      </div>
-      <div>
-        <h4 class="brown">And more</h4>
-        <p>Lorem ipsum</p>
-        <p>dolor</p>
-        <p>sit amet</p>
-        <p>consectetur</p>
-      </div>
-    </section>
+    </footer>
 
     <script src="script.js"></script>
   </body>
